--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         var country_balls = []
 
         try {
-            var ws = new WebSocket('ws://0.0.0.0:8001/ws');
+            var ws = new WebSocket('ws://localhost:8080/ws');
         } catch (err) {
             console.log('Connection attempt failed')
         }
